--- a/src/Pim/Bundle/BaseConnectorBundle/Resources/config/readers.yml
+++ b/src/Pim/Bundle/BaseConnectorBundle/Resources/config/readers.yml
@@ -9,6 +9,7 @@ parameters:
 
     pim_base_connector.reader.file.csv.class:          Pim\Bundle\BaseConnectorBundle\Reader\File\CsvReader
     pim_base_connector.reader.file.csv_product.class:  Pim\Bundle\BaseConnectorBundle\Reader\File\CsvProductReader
+    pim_base_connector.reader.file.csv_association.class:  Pim\Bundle\BaseConnectorBundle\Reader\File\CsvAssociationReader
     pim_base_connector.reader.file.csv_category.class: Pim\Bundle\BaseConnectorBundle\Reader\File\CsvCategoryReader
 
     pim_base_connector.reader.file.yaml.class:         Pim\Bundle\BaseConnectorBundle\Reader\File\YamlReader
@@ -82,6 +83,12 @@ services:
             - %pim_catalog.entity.locale.class%
             - %pim_catalog.entity.currency.class%
 
+    pim_base_connector.reader.file.csv_association:
+        parent: pim_base_connector.reader.file.csv
+        class: %pim_base_connector.reader.file.csv_association.class%
+        arguments:
+            - '@pim_base_connector.formater.csv'
+
     pim_base_connector.reader.file.csv_variant_group:
         alias: pim_base_connector.reader.file.csv_product
 
@@ -124,5 +131,6 @@ services:
     pim_base_connector.reader.dummy:
         class: %pim_base_connector.reader.dummy.class%
 
+    # Deprecated: This service is deprecated and will be removed in 1.5
     pim_base_connector.reader.cached_association:
         class: %pim_base_connector.reader.cached.class%
