--- a/src/Pim/Bundle/BaseConnectorBundle/Resources/config/readers.yml
+++ b/src/Pim/Bundle/BaseConnectorBundle/Resources/config/readers.yml
@@ -1,16 +1,16 @@
 parameters:
     # @deprecated, will be remove in 1.4
-    pim_base_connector.reader.doctrine.bulk_product.class: Pim\Bundle\BaseConnectorBundle\Reader\Doctrine\BulkProductReader
-    pim_base_connector.reader.orm.entity.class:            Pim\Bundle\BaseConnectorBundle\Reader\ORM\EntityReader
-    pim_base_connector.reader.orm.category.class:          Pim\Bundle\BaseConnectorBundle\Reader\ORM\CategoryReader
-    pim_base_connector.reader.orm.attribute_option.class:  Pim\Bundle\BaseConnectorBundle\Reader\ORM\AttributeOptionReader
+    pim_base_connector.reader.doctrine.bulk_product.class:    Pim\Bundle\BaseConnectorBundle\Reader\Doctrine\BulkProductReader
+    pim_base_connector.reader.orm.entity.class:               Pim\Bundle\BaseConnectorBundle\Reader\ORM\EntityReader
+    pim_base_connector.reader.orm.category.class:             Pim\Bundle\BaseConnectorBundle\Reader\ORM\CategoryReader
+    pim_base_connector.reader.orm.attribute_option.class:     Pim\Bundle\BaseConnectorBundle\Reader\ORM\AttributeOptionReader
     pim_base_connector.reader.repository.group.class:         Pim\Bundle\BaseConnectorBundle\Reader\Repository\GroupReader
     pim_base_connector.reader.repository.variant_group.class: Pim\Bundle\BaseConnectorBundle\Reader\Repository\VariantGroupReader
 
-    pim_base_connector.reader.file.csv.class:          Pim\Bundle\BaseConnectorBundle\Reader\File\CsvReader
-    pim_base_connector.reader.file.csv_product.class:  Pim\Bundle\BaseConnectorBundle\Reader\File\CsvProductReader
+    pim_base_connector.reader.file.csv.class:              Pim\Bundle\BaseConnectorBundle\Reader\File\CsvReader
+    pim_base_connector.reader.file.csv_product.class:      Pim\Bundle\BaseConnectorBundle\Reader\File\CsvProductReader
     pim_base_connector.reader.file.csv_association.class:  Pim\Bundle\BaseConnectorBundle\Reader\File\CsvAssociationReader
-    pim_base_connector.reader.file.csv_category.class: Pim\Bundle\BaseConnectorBundle\Reader\File\CsvCategoryReader
+    pim_base_connector.reader.file.csv_category.class:     Pim\Bundle\BaseConnectorBundle\Reader\File\CsvCategoryReader
 
     pim_base_connector.reader.file.yaml.class:         Pim\Bundle\BaseConnectorBundle\Reader\File\YamlReader
 
@@ -87,7 +87,7 @@ services:
         parent: pim_base_connector.reader.file.csv
         class: %pim_base_connector.reader.file.csv_association.class%
         arguments:
-            - '@pim_base_connector.formater.csv'
+            - '@pim_transform.builder.field_name'
 
     pim_base_connector.reader.file.csv_variant_group:
         alias: pim_base_connector.reader.file.csv_product
