PIM-2026: Use only one job for each product mass edit action

--- a/src/Pim/Bundle/EnrichBundle/Resources/config/mass_actions.yml
+++ b/src/Pim/Bundle/EnrichBundle/Resources/config/mass_actions.yml
@@ -11,7 +11,7 @@ parameters:
     pim_enrich.mass_edit_action.add_to_groups.class: Pim\Bundle\EnrichBundle\MassEditAction\Operation\AddToGroups
     pim_enrich.mass_edit_action.add_to_variant_group.class: Pim\Bundle\EnrichBundle\MassEditAction\Operation\AddToVariantGroup
     pim_enrich.mass_edit_action.set_attribute_requirements.class: Pim\Bundle\EnrichBundle\MassEditAction\Operation\SetAttributeRequirements
-    pim_enrich.mass_edit_handler.change_status.class: Pim\Bundle\EnrichBundle\MassEditAction\Handler\ChangeStatusHandler
+    pim_enrich.mass_edit_handler.update_product.class: Pim\Bundle\EnrichBundle\MassEditAction\Handler\UpdateProductHandler
 
 services:
     # Mass edit action operator registry
@@ -140,8 +140,8 @@ services:
                 acl: pim_enrich_family_edit_attributes
                 datagrid: family-grid
 
-    pim_enrich.mass_edit_handler.change_status:
-        class: %pim_enrich.mass_edit_handler.change_status.class%
+    pim_enrich.mass_edit_handler.update_product:
+        class: %pim_enrich.mass_edit_handler.update_product.class%
         arguments:
             - '@pim_catalog.query.product_query_builder_factory'
             - '@pim_catalog.updater.product'
