--- a/src/Pim/Bundle/BaseConnectorBundle/Resources/config/steps.yml
+++ b/src/Pim/Bundle/BaseConnectorBundle/Resources/config/steps.yml
@@ -1,3 +1,3 @@
 parameters:
     pim_base_connector.step.validator.class: Pim\Bundle\BaseConnectorBundle\Step\ValidatorStep
-    pim_base_connector.step.mass_edit_change_status.class: Pim\Bundle\BaseConnectorBundle\Step\MassEditChangeStatusStep
+    pim_base_connector.step.mass_edit_update_product.class: Pim\Bundle\BaseConnectorBundle\Step\MassEditUpdateProductStep
