PIM-3836: Fix translations of a custom job label instance

--- a/src/Pim/Bundle/ImportExportBundle/Resources/config/datagrid/job_profile.yml
+++ b/src/Pim/Bundle/ImportExportBundle/Resources/config/datagrid/job_profile.yml
@@ -11,8 +11,7 @@ datagrid:
                 label: Label
             alias:
                 label:     Job
-                type:      translateable
-                data_name: jobAlias
+                type:      job_name
             connector:
                 label: Connector
             status:
