PIM-3825: Translate message and interface

--- a/src/Pim/Bundle/InstallerBundle/Resources/fixtures/icecat_demo_dev/jobs.yml
+++ b/src/Pim/Bundle/InstallerBundle/Resources/fixtures/icecat_demo_dev/jobs.yml
@@ -156,5 +156,5 @@ jobs:
     update_product:
         connector: Akeneo Mass Edit Connector
         alias:     update_product
-        label:     update_product
+        label:     Mass update products
         type:      mass_edit
