--- a/src/Pim/Bundle/EnrichBundle/Resources/config/controllers.yml
+++ b/src/Pim/Bundle/EnrichBundle/Resources/config/controllers.yml
@@ -164,6 +164,7 @@ services:
             - '@akeneo_batch.job_repository'
             - '@akeneo_batch.connectors'
             - '@pim_enrich.mass_edit_action.operation.registry'
+            - '@pim_enrich.mass_edit_action.form_resolver'
 
     pim_enrich.controller.group:
         scope: request
