--- a/src/Pim/Bundle/EnrichBundle/Resources/config/mass_actions.yml
+++ b/src/Pim/Bundle/EnrichBundle/Resources/config/mass_actions.yml
@@ -12,6 +12,7 @@ parameters:
     pim_enrich.mass_edit_action.add_to_variant_group.class: Pim\Bundle\EnrichBundle\MassEditAction\Operation\AddToVariantGroup
     pim_enrich.mass_edit_action.set_attribute_requirements.class: Pim\Bundle\EnrichBundle\MassEditAction\Operation\SetAttributeRequirements
     pim_enrich.mass_edit_handler.update_product.class: Pim\Bundle\EnrichBundle\MassEditAction\Handler\UpdateProductHandler
+    pim_enrich.mass_edit_action.form_resolver.class: Pim\Bundle\EnrichBundle\MassEditAction\MassEditFormResolver
 
 services:
     # Mass edit action operator registry
@@ -21,6 +22,12 @@ services:
     # Mass edit action operation registry
     pim_enrich.mass_edit_action.operation.registry:
         class: %pim_enrich.mass_edit_action.operation.registry.class%
+
+    pim_enrich.mass_edit_action.form_resolver:
+        class: %pim_enrich.mass_edit_action.form_resolver.class%
+        arguments:
+            - '@pim_enrich.mass_edit_action.operation.registry'
+            - '@form.factory'
 
     # Mass edit action operators
     pim_enrich.mass_edit_action.operator:
