--- a/src/Pim/Bundle/TransformBundle/Resources/config/guessers.yml
+++ b/src/Pim/Bundle/TransformBundle/Resources/config/guessers.yml
@@ -9,6 +9,7 @@ parameters:
     pim_transform.transformer.guesser.regexp.class:             Pim\Bundle\TransformBundle\Transformer\Guesser\RegexpGuesser
     pim_transform.transformer.guesser.attribute.class:          Pim\Bundle\TransformBundle\Transformer\Guesser\AttributeGuesser
     pim_transform.transformer.guesser.attribute_option.class:   Pim\Bundle\TransformBundle\Transformer\Guesser\AttributeOptionGuesser
+    pim_transform.transformer.guesser.reference_data.class:     Pim\Bundle\TransformBundle\Transformer\Guesser\ReferenceDataGuesser
 
 services:
     pim_transform.transformer.guesser:
@@ -148,6 +149,15 @@ services:
 
     pim_transform.transformer.guesser.attribute_options:
         class: %pim_transform.transformer.guesser.attribute_option.class%
+        public: false
+        parent: pim_transform.transformer.guesser.relation
+        arguments:
+            - %pim_catalog.entity.product_value.class%
+        tags:
+            - { name: pim_transform.transformer.guesser, priority: 200 }
+
+    pim_transform.transformer.guesser.reference_data:
+        class: %pim_transform.transformer.guesser.reference_data.class%
         public: false
         parent: pim_transform.transformer.guesser.relation
         arguments:
