--- a/src/Pim/Bundle/EnrichBundle/Resources/config/mass_actions.yml
+++ b/src/Pim/Bundle/EnrichBundle/Resources/config/mass_actions.yml
@@ -28,6 +28,7 @@ services:
         arguments:
             - '@pim_enrich.mass_edit_action.operation.registry'
             - '@form.factory'
+            - '@pim_enrich.form.type.choose_action'
 
     # Mass edit action operators
     pim_enrich.mass_edit_action.operator:
