--- a/src/Pim/Bundle/UIBundle/Resources/config/forms.yml
+++ b/src/Pim/Bundle/UIBundle/Resources/config/forms.yml
@@ -1,9 +1,11 @@
 parameters:
     pim_ui.form.type.ajax_entity.class:                Pim\Bundle\UIBundle\Form\Type\AjaxEntityType
+    pim_ui.form.type.ajax_reference_data.class:        Pim\Bundle\UIBundle\Form\Type\AjaxReferenceDataType
     pim_ui.form.type.number.class:                     Pim\Bundle\UIBundle\Form\Type\NumberType
     pim_ui.form.type.switch.class:                     Pim\Bundle\UIBundle\Form\Type\SwitchType
     pim_ui.form.transformer.ajax_entity.factory.class: Pim\Bundle\UIBundle\Form\Transformer\AjaxEntityTransformerFactory
     pim_ui.form.transformer.ajax_entity.class:         Pim\Bundle\UIBundle\Form\Transformer\AjaxEntityTransformer
+    pim_ui.form.transformer.ajax_reference_data.class: Pim\Bundle\UIBundle\Form\Transformer\AjaxReferenceDataTransformer
 
 services:
     pim_ui.form.extension.help:
@@ -35,8 +37,24 @@ services:
         tags:
             - { name: form.type, alias: pim_ajax_entity }
 
+    pim_ui.form.type.ajax_reference_data:
+        class: %pim_ui.form.type.ajax_reference_data.class%
+        arguments:
+            - '@router'
+            - '@pim_ui.form.transformer.ajax_reference_data.factory'
+            - '@pim_user.context.user'
+        tags:
+            - { name: form.type, alias: pim_ajax_reference_data }
+
     pim_ui.form.transformer.ajax_entity.factory:
         class: %pim_ui.form.transformer.ajax_entity.factory.class%
         arguments:
             - '@doctrine'
             - %pim_ui.form.transformer.ajax_entity.class%
+
+    pim_ui.form.transformer.ajax_reference_data.factory:
+        class: %pim_ui.form.transformer.ajax_entity.factory.class%
+        arguments:
+            - '@doctrine'
+            - %pim_ui.form.transformer.ajax_reference_data.class%
+
