--- a/src/Acme/Bundle/AppBundle/Resources/config/doctrine/Fabric.orm.yml
+++ b/src/Acme/Bundle/AppBundle/Resources/config/doctrine/Fabric.orm.yml
@@ -18,4 +18,5 @@ Acme\Bundle\AppBundle\Entity\Fabric:
         alternativeName:
             type: string
             length: 255
+            nullable: true
     lifecycleCallbacks: {  }
